--- a/package.json
+++ b/package.json
@@ -10,7 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@radix-icons/vue": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "nuxt": "^3.12.4",
-    "vue": "latest"
+    "radix-vue": "^1.9.2",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "vue": "latest",
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "shadcn-nuxt": "^0.10.4",
+    "typescript": "^5.5.3"
+  },
+  "devDependencies": {
+   
   }
 }
