--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/icon": "^1.3.0",
     "@nuxt/image": "^1.7.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@pinia/nuxt": "^0.5.1",
     "@radix-icons/vue": "^1.0.0",
     "@vee-validate/nuxt": "^4.13.2",
     "@vee-validate/zod": "^4.13.2",
@@ -22,6 +23,7 @@
     "clsx": "^2.1.1",
     "nuxt": "^3.12.4",
     "nuxt-icons": "^3.2.1",
+    "pinia": "^2.1.7",
     "radix-vue": "^1.9.2",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.4.0",
@@ -30,5 +32,8 @@
     "vee-validate": "^4.13.2",
     "vue": "latest",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@iconify-json/icomoon-free": "^1.1.8"
   }
 }
